--- a/index.css
+++ b/index.css
@@ -149,8 +149,7 @@ a:hover{
 
 /* -------------------PROJECT---------------- */
 
-.main{
-  display: flex;
+/* .main{
   padding-left: 0px;
   padding-right: 0px;
   padding-top: 3%;
@@ -160,13 +159,23 @@ a:hover{
   position:relative;
   width: 100%;
   background-repeat: no-repeat;
+} */
+
+.flip-card-container {
+  display: grid;
+  padding: 10px;
+  align-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 10px;
 }
+
   .flip-card {
     width: 300px;
     height: 300px;
     perspective: 1000px;
-    padding: 60px;
-    display:flex;
+    margin: 20px auto;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 300px);
     
   }
 
@@ -189,7 +198,6 @@ a:hover{
     position: absolute;
     width: 100%;
     height: 100%;
-    border:1 px solid;
     border-radius: 20%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
