--- a/skills.css
+++ b/skills.css
@@ -25,7 +25,6 @@ font-family: 'Varela Round', sans-serif;
 margin-bottom: 0px;
 padding-top:0px;
 margin-top: 0px;
-    padding-left: 40%;
     font-family: 'Otomanopee One', sans-serif;
 font-size: 25px;
 cursor:context-menu;
@@ -105,4 +104,22 @@ img.vert-move {
         background-size: cover;
         width: 100%;
       
+}
+
+@media (max-width: 1060px) {
+.vert-move{
+    float: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin: 20px auto;
+    padding-top: 20px;
+}
+
+.contain{
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 }
