🚀 Performance Patches Converted PNGs to Webp Minified CSS

--- a/skills.css
+++ b/skills.css
@@ -1,125 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
-p {
-    font-size: 20px;
-font-family: 'Varela Round', sans-serif;
-}
-
-.contain{
-
-    height: 490px;
-    width: 600px;
-    margin-top: 3%;
-    margin-left: 5%;
-    background: #f9f9faef;
-    overflow: hidden;
-    padding-bottom: 0px;
-    margin-bottom:0px;
-    line-height:10px;
-    border-radius: 20px;
-    box-shadow: 0 0 20px 8px #e4dbdb;
-  }
-  .title{
-    text-align: center;
-    padding-bottom: 0px;
-    background-color: #dcdcdc;
-margin-bottom: 0px;
-padding-top:0px;
-margin-top: 0px;
-    font-family: 'Otomanopee One', sans-serif;
-font-size: 25px;
-cursor:context-menu;
-  }
-  .content {
-    position: absolute;
-    text-align: justify;
-    color: black;
-    padding: 40px;
-    font-family: 'Merriweather', serif;
-  }
-.container {
-    background-color: rgb(192, 192, 192);
-    width: 350%;
-    border-radius: 15px;
-}
-
-.skill {
-    background-color: rgba(33, 28, 94, 0.671);
-    color: white;
-    text-align: right;
-    font-size: 10px;
-    border-radius: 15px;
-}
-
-.html {
-    width: 95%;
-}
-
-.css {
-    width: 85%;
-}
-.wc {
-    width: 95%;
-}
-.git{
-    width: 50%;
-}
-.py {
-    width: 40%;
-}
-.JS {
-    width: 20%;
-}
-.sql {
-    width: 40%;
-}
-
-
-/* IMAGE MOVEMENT */
-.vert-move{
-    float: right;
-    padding-right: 7%;
-    padding-top: 18%;
-}
-img.vert-move {
-    -webkit-animation: mover 1s infinite  alternate;
-    animation: mover 1s infinite  alternate;
-}
-img.vert-move {
-    -webkit-animation: mover 1s infinite  alternate;
-    animation: mover 1s infinite  alternate;
-}
-@-webkit-keyframes mover {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-10px); }
-}
-@keyframes mover {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-10px); }
-}
-.bg{
-        padding-left: 0px;
-        padding-right: 0px;
-        background:url(./images/back.jpg) no-repeat;
-        background-position: center;
-        background-size: cover;
-        width: 100%;
-      
-}
-
-@media (max-width: 1060px) {
-.vert-move{
-    float: none;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin: 20px auto;
-    padding-top: 20px;
-}
-
-.contain{
-    position: relative;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-}
+@import url(https://fonts.googleapis.com/css2?family=Varela+Round&display=swap);p{font-size:20px;font-family:'Varela Round',sans-serif}.contain{height:490px;width:600px;margin-top:3%;margin-left:5%;background:#f9f9faef;overflow:hidden;padding-bottom:0;margin-bottom:0;line-height:10px;border-radius:20px;box-shadow:0 0 20px 8px #e4dbdb}.title{text-align:center;padding-bottom:0;background-color:#dcdcdc;margin-bottom:0;padding-top:0;margin-top:0;font-family:'Otomanopee One',sans-serif;font-size:25px;cursor:context-menu}.content{position:absolute;text-align:justify;color:#000;padding:40px;font-family:Merriweather,serif}.container{background-color:silver;width:350%;border-radius:15px}.skill{background-color:rgba(33,28,94,.671);color:#fff;text-align:right;font-size:10px;border-radius:15px}.html{width:95%}.css{width:85%}.wc{width:95%}.git{width:50%}.py{width:40%}.JS{width:20%}.sql{width:40%}.vert-move{float:right;padding-right:7%;padding-top:18%}img.vert-move{-webkit-animation:mover 1s infinite alternate;animation:mover 1s infinite alternate}img.vert-move{-webkit-animation:mover 1s infinite alternate;animation:mover 1s infinite alternate}@-webkit-keyframes mover{0%{transform:translateY(0)}100%{transform:translateY(-10px)}}@keyframes mover{0%{transform:translateY(0)}100%{transform:translateY(-10px)}}.bg{padding-left:0;padding-right:0;background:url(images/back.jpg) no-repeat;background-position:center;background-size:cover;width:100%}@media (max-width:1060px){.vert-move{float:none;display:block;margin-left:auto;margin-right:auto;margin:20px auto;padding-top:20px}.contain{position:relative;display:block;margin-left:auto;margin-right:auto}}
