--- a/index.css
+++ b/index.css
@@ -1,353 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap');
-
-
-html {
-  scroll-behavior: smooth;
-}
-body{
-    padding:0px;
-    margin: 0px;
-    }
-
-    main{
-      background-image: linear-gradient(rgba(32, 42, 78, 0.431),rgba(32, 42, 78, 0.431)),url("./Images/banner.PNG");
-      background-position: center;
-      background-size: cover;
-      position:relative;
-      width: 100%;
-      background-repeat: no-repeat;
-      padding:0px;
-      margin: 0px;
-      }
-
-   /*------------------NAVBAR------------------*/
-
-nav{
-    background-color: #F8F8FF;
-    padding:0px;
-    margin:0px;
-    margin-top: -5px;
-    overflow: hidden;
-    padding-top: 0px;
-    margin-bottom: 0px;
-    height:85px;
-    width: 100%;
-
-
-}
-
-li{
-    float:right;
-    padding-left: 20px;
-    padding-top: 10px;
-    padding-right: 20px;
-    list-style: none;
-    font-size:19px;
-    text-transform: uppercase;
-    font-family: 'Otomanopee One', sans-serif;
-    
-}
-a{
-    color:#414a4c;
-    text-decoration: none;
-
-}
-.header-logo{
-    float:left;
-    padding-left:30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.image{
-    height:70px;
-    margin-bottom: 10%;
-}
-.image:hover{
-    transform: scale(1.4);
-    transition: 0.5s all ease-in-out;
-}
-
-/*------------------------------HERO-SECTION--------------------------*/
-
-.headline{
-color: aliceblue;
-cursor: context-menu;
-font-family: 'Bubblegum Sans', cursive;
-text-align: center;
-font-size: 70px;
-padding-bottom: 7px;
-letter-spacing:3px;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
-.subline{
-    color: aliceblue;
-    cursor: context-menu;
-    font-family: 'Montserrat', sans-serif;
-    text-align: center;
-   padding-bottom: 40px;
-   font-size: 30px;
-    
-}
-a:hover{
-    transform: scale(1.5);
-    color:#000060;
-    text-underline-position: below;
-    text-underline-offset: transform scale(1.03);
-    
-}
-.header-logo a{
-    color:black;
-    margin-bottom:10%;
-    padding-bottom:10%;
-}
-.navbar ul li::after{
-    content: '';
-    height: 2px;
-    background:#21224d;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-    width: 0%;
-}
-
-
-.navbar ul li:hover::after{
-    width: 100%;
-}
-
-.name{
-    float:left;
-    cursor: pointer;
-}
-
-.name {
-    font-size: 20px;
-    color: #fff;
-    text-align: center;
-    -webkit-animation: glow 1s ease-in-out infinite alternate;
-    -moz-animation: glow 1s ease-in-out infinite alternate;
-    animation: glow 1s ease-in-out infinite alternate;
-  }
-  
-  .name:hover{
-    transform: scale(1.4);
-    padding-left: 5%;
-  }
-  @-webkit-keyframes glow {
-    from {
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #00008b, 0 0 40px #4682b4, 0 0 50px #002ae6, 0 0 60px #6b3dbeb7, 0 0 70px #0036e6e0;
-    }
-    to {
-      text-shadow: 0 0 20px #fff, 0 0 30px #0000ff, 0 0 40px #4d8bff, 0 0 50px #4dd5ff, 0 0 60px #1f1269, 0 0 70px #5f4dff, 0 0 80px #4846db;
-    }
-  }
-
-  /* STICKY NAVBAR */
-
-/* -------------------PROJECT---------------- */
-
-/* .main{
-  padding-left: 0px;
-  padding-right: 0px;
-  padding-top: 3%;
-  background:url(./images/back.jpg) no-repeat;
-  background-position: center;
-  background-size: cover;
-  position:relative;
-  width: 100%;
-  background-repeat: no-repeat;
-} */
-
-.flip-card-container {
-  display: grid;
-  padding: 10px;
-  align-items: center;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 10px;
-}
-
-  .flip-card {
-    width: 300px;
-    height: 300px;
-    perspective: 1000px;
-    margin: 20px auto;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 300px);
-    
-  }
-
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    border-radius: 20%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  }
-  
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-  
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 20%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  
-  .flip-card-front {
-    background-color: #bbb;
-    color: black;
-  }
-  .box{
-    border:1 px solid;
-    border-radius: 20%;
-  }
-  .flip-card-back {
-    background-color: #1c1b46;
-    color: white;
-    transform: rotateY(180deg);
-  }
-
-  @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap');
-  h1{
-    font-family: 'Source Sans Pro', sans-serif;
-    padding-top:6px;
-  }
-
-
-.top{
-    text-align: center;
-    font-family: 'Otomanopee One', sans-serif;
-font-size: 25px;
-padding-bottom: 0px;
-margin-bottom: 0px;
-padding-top:0px;
-margin-top: 0px;
-cursor:context-menu;
-background-color: #dcdcdc;
-  }
-
-.bground{
-  background-color: #dcdcdc;
-}
-  /* BUTTON */
-
-
-button{
-  padding-top: 70%;
-}
-
-.button:hover{
-  background-color: #fff;
-  border: 1px solid ;
-  color: black;
-  border-color: #1722b4;
-}
-
-  .button {
-  background-color: #0a1636; /* Green */
-  border: 3px solid;
-  border-radius: 15px;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-/* FOOTER */
-
-.footer , .foot{
-  background-color: #0a0a1b;
-  margin-bottom: 0px;
-
-}
-
-.co{
-  background-color: #0a0a1b;
-  width: 50%;
-  margin-bottom: 0px;
-  padding-top: 2px;
-  padding-right: 26%;
-  cursor:context-menu;
-}
-.co h2{
-  color: #fff;
-  margin-bottom: 0px;
-  padding-left: 10%;
-  text-transform: uppercase;
-  border-bottom: 2px solid red;
-}
-.des{
-  font-size:17px;
-}
-span{
-  color: red;
-}
-.foot p {
-  color: #fff;
-  padding-left: 5%;
-  margin-bottom: 0px;
-}
-
-.foot2 p{
-background-color:#273036;
-text-align: center;
-color: #fefefa;
-margin-bottom: 0px;
-padding-bottom: 0px;
-}
-
-.icons{
-  float: right;
-  padding-right:2%;
-  color: white;
-  
-}
-
-i{
-  color: #fff;
-  margin-left: 30px;
-  cursor: pointer;
-  font-size: 1.7rem;
-  float: left;
-
-}
-
-i:hover{
-    transform: scale(1.2);
-    transition: 0.5s all ease-in-out;
-
-}
-
-i:nth-child(1):hover{
-  color: #0077b5;
-}
-
-i:nth-child(2):hover{
-  color: #1DA1F2;
-}
-
-.fa-github:nth-child(1):hover{
-  color: #afb4b6;
-}
-
-.fas:nth-child(1):hover{
-  color: #7ea19d;
-
-}
-
-.f2{
-  font-size:18px;
-}
+@import url(https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap);@import url(https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap);html{scroll-behavior:smooth}body{padding:0;margin:0}main{background-image:linear-gradient(rgba(32,42,78,.431),rgba(32,42,78,.431)),url(Images/banner.webp);background-position:center;background-size:cover;position:relative;width:100%;background-repeat:no-repeat;padding:0;margin:0}nav{background-color:#f8f8ff;padding:0;margin:0;margin-top:-5px;overflow:hidden;padding-top:0;margin-bottom:0;height:85px;width:100%}li{float:right;padding-left:20px;padding-top:10px;padding-right:20px;list-style:none;font-size:19px;text-transform:uppercase;font-family:'Otomanopee One',sans-serif}a{color:#414a4c;text-decoration:none}.header-logo{float:left;padding-left:30px;padding-top:10px;padding-bottom:10px}.image{height:70px;margin-bottom:10%}.image:hover{transform:scale(1.4);transition:.5s all ease-in-out}.headline{color:#f0f8ff;cursor:context-menu;font-family:'Bubblegum Sans',cursive;text-align:center;font-size:70px;padding-bottom:7px;letter-spacing:3px}.subline{color:#f0f8ff;cursor:context-menu;font-family:Montserrat,sans-serif;text-align:center;padding-bottom:40px;font-size:30px}a:hover{transform:scale(1.5);color:#000060;text-underline-position:below;text-underline-offset:transform scale(1.03)}.header-logo a{color:#000;margin-bottom:10%;padding-bottom:10%}.navbar ul li::after{content:'';height:2px;background:#21224d;display:block;margin:auto;transition:.5s;width:0%}.navbar ul li:hover::after{width:100%}.name{float:left;cursor:pointer}.name{font-size:20px;color:#fff;text-align:center;-webkit-animation:glow 1s ease-in-out infinite alternate;-moz-animation:glow 1s ease-in-out infinite alternate;animation:glow 1s ease-in-out infinite alternate}.name:hover{transform:scale(1.4);padding-left:5%}@-webkit-keyframes glow{from{text-shadow:0 0 10px #fff,0 0 20px #fff,0 0 30px #00008b,0 0 40px #4682b4,0 0 50px #002ae6,0 0 60px #6b3dbeb7,0 0 70px #0036e6e0}to{text-shadow:0 0 20px #fff,0 0 30px #00f,0 0 40px #4d8bff,0 0 50px #4dd5ff,0 0 60px #1f1269,0 0 70px #5f4dff,0 0 80px #4846db}}.flip-card-container{display:grid;padding:10px;align-items:center;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));grid-gap:10px}.flip-card{width:300px;height:300px;perspective:1000px;margin:20px auto;grid-template-columns:repeat(3,1fr);grid-template-rows:repeat(2,300px)}.flip-card-inner{position:relative;width:100%;height:100%;border-radius:20%;text-align:center;transition:transform .6s;transform-style:preserve-3d;box-shadow:0 4px 8px 0 rgba(0,0,0,.2)}.flip-card:hover .flip-card-inner{transform:rotateY(180deg)}.flip-card-back,.flip-card-front{position:absolute;width:100%;height:100%;border-radius:20%;-webkit-backface-visibility:hidden;backface-visibility:hidden}.flip-card-front{background-color:#bbb;color:#000}.box{border:1 px solid;border-radius:20%}.flip-card-back{background-color:#1c1b46;color:#fff;transform:rotateY(180deg)}h1{font-family:'Source Sans Pro',sans-serif;padding-top:6px}.top{text-align:center;font-family:'Otomanopee One',sans-serif;font-size:25px;padding-bottom:0;margin-bottom:0;padding-top:0;margin-top:0;cursor:context-menu;background-color:#dcdcdc}.bground{background-color:#dcdcdc}button{padding-top:70%}.button:hover{background-color:#fff;border:1px solid;color:#000;border-color:#1722b4}.button{background-color:#0a1636;border:3px solid;border-radius:15px;color:#fff;padding:15px 32px;text-align:center;text-decoration:none;display:inline-block;font-size:16px;margin:4px 2px;cursor:pointer}.foot,.footer{background-color:#0a0a1b;margin-bottom:0}.co{background-color:#0a0a1b;width:50%;margin-bottom:0;padding-top:2px;padding-right:26%;cursor:context-menu}.co h2{color:#fff;margin-bottom:0;padding-left:10%;text-transform:uppercase;border-bottom:2px solid red}.des{font-size:17px}span{color:red}.foot p{color:#fff;padding-left:5%;margin-bottom:0}.foot2 p{background-color:#273036;text-align:center;color:#fefefa;margin-bottom:0;padding-bottom:0}.icons{float:right;padding-right:2%;color:#fff}i{color:#fff;margin-left:30px;cursor:pointer;font-size:1.7rem;float:left}i:hover{transform:scale(1.2);transition:.5s all ease-in-out}i:nth-child(1):hover{color:#0077b5}i:nth-child(2):hover{color:#1da1f2}.fa-github:nth-child(1):hover{color:#afb4b6}.fas:nth-child(1):hover{color:#7ea19d}.f2{font-size:18px}
